tests/snapshots/examples_fixtures/type_system__failing__148_constructor_pattern_arity_left_too_many.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/148_constructor_pattern_arity_left_too_many.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E085]: CONSTRUCTOR PATTERN ARITY MISMATCH

Constructor pattern `LeftI` expects 1 argument(s) but got 3.

  --> examples/type_system/failing/148_constructor_pattern_arity_left_too_many.flx:8:9
  |
8 |         LeftI(a, b, c) -> a,
  |         ^^^^^^^^^^^^^^

Hint:
  Check the constructor's declared pattern field count.
== stdout ==
<not executed>
