tests/snapshots/examples_fixtures/type_system__failing__14_unhandled_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/14_unhandled_effect.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found perform.

  --> examples/type_system/failing/14_unhandled_effect.flx:2:1
  |
2 | perform Console.print("hello")
  | ^^^^^^^
== stdout ==
<not executed>
