tests/snapshots/examples_fixtures/type_system__failing__150_cross_module_constructor_access_nonstrict_warning.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/150_cross_module_constructor_access_nonstrict_warning.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `TypeSystem.BoundaryCtor` to import.

  examples/type_system/failing/150_cross_module_constructor_access_nonstrict_warning.flx:3:1
  |
3 | import TypeSystem.BoundaryCtor
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `TypeSystem.BoundaryCtor.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `TypeSystem.BoundaryCtor` under roots: examples/type_system/failing, src (imported from examples/type_system/failing/150_cross_module_constructor_access_nonstrict_warning.flx).
== stdout ==
<not executed>
