tests/snapshots/examples_fixtures/type_system__failing__152_array_literal_callarg_conflict_prefers_e300.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx:31:30
   |
31 |     let _x = takes_ints([|1, "two"|])
   |                              ^^^^^
   |                              ----- this expression has type `String`

   |                              ----- this type mismatch is reported here

Note:
  expected type: Int
  found type: String
  the conflicting types meet at this expression

Help:
  These two types are not compatible.
== stdout ==
<not executed>
