tests/snapshots/examples_fixtures/type_system__failing__153_stage_all_errors_flag.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/153_stage_all_errors_flag.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E071]: Unterminated String

String literal is missing closing quote.

  examples/type_system/failing/153_stage_all_errors_flag.flx:7:18
  |
7 |     let broken = "unterminated
  |                  ^^^^^^^^^^^^^

Hint:
  Add a closing " at the end of the string.
== stdout ==
<not executed>
