tests/snapshots/examples_fixtures/type_system__failing__156_unresolved_call_arg_strict_e425.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/156_unresolved_call_arg_strict_e425.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `mystery_value`.

  --> examples/type_system/failing/156_unresolved_call_arg_strict_e425.flx:4:32
  |
4 |     let value: Int = takes_int(mystery_value)
  |                                ^^^^^^^^^^^^^

Hint:
  Define it first: let mystery_value = ...;
== stdout ==
<not executed>
